@@ -17,6 +17,9 @@
  - Fixed /unload <plugin_file_name> crash.
  - Fixed userlist popup menu disappearing on button-release.
  - Added hack to make plugins possible on win32.
+ - Keep the leading ":" in server events passed to plugins.
+ - Added xchat_hook_socket to plugin interface.
+ - 
  - 
  - 
 
